[package]
name = "cc"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]

[dependencies.quickcheck]
version = "0.8"
optional = true
default-features = false

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
default = []
proptest = [ "quickcheck" ]
