[package]
name = "ophelia-bls-amcl"
version = "0.2.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia bls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls_amcl = "0.7"
ophelia = { path = "../ophelia", version = "0.2" }
ophelia-derive = { path = "../ophelia-derive", version = "0.2" }
thiserror = "1.0"

[features]
default = []
rogue-pubkey-resist = []

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
rand = "0.7"
