[package]
name = "ophelia-bls12381"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia bls12381"

[dependencies]
ophelia = { path = "../ophelia", version = "0.1" }
ophelia-derive = { path = "../ophelia-derive", version = "0.1" }

threshold_crypto = "0.3"
serde = "1.0"
bincode = "1.1"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[dependencies.rand]
version = "0.6"
optional = true
default-features = false

[dev-dependencies]
ophelia = { path = "../ophelia", version = "0.1", features = [ "proptest" ] }

rand = "0.6"
sha2 = "0.8"

[features]
default = []
generate = [ "ophelia/generate", "rand" ]
