[package]
name = "ophelia-ed25519"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia ed25519"

[dependencies]
ophelia = { path = "../ophelia", version = "0.1" }
ophelia-derive = { path = "../ophelia-derive", version = "0.1" }

ed25519-dalek = { version = "1.0.0-pre.1", features = [ "asm" ] }
curve25519-dalek = "1.2"
# ed25519 requires rand 0.6
rand = "0.6"
thiserror = "1.0"

[dev-dependencies]
rand = "0.6"
quickcheck = "0.8"
quickcheck_macros = "0.8"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
