[package]
name = "ophelia-ed25519"
version = "0.3.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia ed25519"

[dependencies]
ophelia = "0.3"
ophelia-derive = "0.3"
ed25519-dalek = { version = "1.0.0-pre.3", features = [ "asm" ] }
curve25519-dalek = "2.0"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
rand = "0.7"
