[package]
name = "ophelia-ed25519"
version = "0.3.2"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia ed25519"

[dependencies]
ophelia = "0.3"
ophelia-derive = "0.3"
ed25519-dalek = { version = "1.0", features = [ "asm" ] }
curve25519-dalek = "3.2"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
rand = "0.7"
