[package]
name = "ophelia-hasher-blake2b"
version = "0.2.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia blake2b hasher"

[dependencies]
ophelia-hasher = "0.2"
blake2b_simd = "0.5"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
