[package]
name = "ophelia-hasher-keccak256"
version = "0.2.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia keccak256 hasher"

[dependencies]
ophelia-hasher = "0.2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
