[package]
name = "ophelia-hasher"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
quickcheck = { version = "0.8", default-features = false, optional = true }
derive_more = "0.15"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
proptest = [ "quickcheck" ]
