[package]
name = "ophelia-secp256k1"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia secp256k1"

[dependencies]
ophelia = { path = "../ophelia", version = "0.1" }
ophelia-derive = { path = "../ophelia-derive", version = "0.1" }
secp256k1 = { version = "0.17" }
lazy_static = "1.4"

[dev-dependencies]
sha2 = "0.8"
quickcheck = "0.9"
quickcheck_macros = "0.8"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
