[package]
name = "ophelia-secp256k1"
version = "0.3.5"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia secp256k1"

[dependencies]
ophelia = "0.3"
ophelia-derive = "0.3"
secp256k1 = { version = "0.20", features = ["std", "recovery"] }
lazy_static = "1.4"

[dev-dependencies]
sha2 = "0.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
rand = "0.7"
