[package]
name = "ophelia-sm2"
version = "0.1.0"
authors = ["zero.qn <zero.qn@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ophelia sm2"

[dependencies]
ophelia = { path = "../ophelia", version = "0.1" }
ophelia-derive = { path = "../ophelia-derive", version = "0.1" }
libsm = { git = "https://github.com/cryptape/libsm", rev = "ac323abd3512a9fdb8bfd6cd349a6fc46deb688f" }
lazy_static = "1.4"
thiserror = "1.0"

[dev-dependencies]
sha2 = "0.8"
quickcheck = "0.9"
quickcheck_macros = "0.8"
ophelia-quickcheck = { path = "../ophelia-quickcheck" }
rand = "0.7"
